# Capstone-BCI-Flight-Simulator

./: .README.rst.swp  README.rst
BCI Interface/: BCI Interface.cbp  BCI Interface.depend  BCI Interface.layout  CMakeLists.txt
BCI Interface/include/: Alert.h  Calibrator.h  Callbacks.h  ChannelData.h  Commands.h  DESolver.h  DEv_Filter.h  DataLogger.h  Detector.h  EEG_DEv_Filter.h  Fgfs.h  FilterSolver.h  Flightgear_BCI.h  GUI.h  Instrument.h  InterleavedChannelData.h  Sequence.h  Sequence_Wrapper.h  SignalSource.h  Socket.h  Sound.h  SystemParameters.h  Template.h  TestDef.h  UsbAmpSource.h  Validator.h
BCI Interface/res/: f.txt  m_seq.txt  my_protocol.xml  thresholds.txt
BCI Interface/src/: Alert.cpp  CMakeLists.txt  Calibrator.cpp  Calibrator_Interface.cpp  Callbacks.cpp  Commands.cpp  DESolver.cpp  DEv_Filter.cpp  DataLogger.cpp  DataLogger_Interface.cpp  Detector.cpp  Detector_Interface.cpp  EEG_DEv_Filter.cpp  FGFS.cpp  FGFS_Interface.cpp  FilterSolver.cpp  FilteredChannelData.cpp  Flightgear_BCI.cpp  GUI.cpp  Instrument.cpp  Instrument_Interface.cpp  InterleavedChannelData.cpp  Sequence.cpp  Sequence_Wrapper.cpp  Sequence_Wrapper_Interface.cpp  Socket.cpp  Sound.cpp  SystemParameters_Interface.cpp  Template.cpp  TestDef.cpp  UsbAmpSource.cpp  Validator.cpp  WFilter_Interface.cpp  create_whitening_filter.cpp  csv_vv.cpp  eeg_buffer.cpp  eeg_buffer_win.cpp  eeg_whitening_filter.cpp
BioAmp/: CMakeLists.txt  install_manifest.txt
FlightGear Interface/: FlightGearGUI.form  FlightGearGUI.java  FlightInterface.form  FlightInterface.java  README.txt  threads.cxx
(+47 files in other folders)
